# heuristic-algorithms-ai

./: .gitignore  README.md  lab1_panin.ipynb  lab2_panin.ipynb  lab3_panin.ipynb  lab4_panin.ipynb  pyproject.toml
