[tool.poetry]
name = "эвристические алгоритмы"
version = "0.1.0"
description = ""
authors = ["Mikhail Panin <etopanin@ya.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.3.3"
matplotlib = "^3.10.6"
pandas = "^2.3.3"
nbconvert = "^7.16.6"
seaborn = "^0.13.2"
scipy = "^1.16.2"
tqdm = "^4.67.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
